# Model-Lineage-Guard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  mlguard_entrypoint.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  cli.py  datahub_client.py  demo_context.py  findings.py  report.py  writeback.py
app/checks/: __init__.py  base.py  deployment_config_drift.py  feature_leakage_risk.py  missing_owner.py  model_performance_regression.py  pii_exposure.py  schema_drift.py  stale_dataset.py
app/templates/: report.html.j2
config/: writeback_policy.json
docs/: architecture.md  demo-video-script.md  github-action-example.yml  judging-notes.md  live-datahub-verification.md  performance-improvements.md  roadmap.md  submission-checklist.md  writeback-policy.md  writeback-safety.md
examples/: README.md  generated_pr_comment.md  report.html  report.json  sample_lineage_report.html  sample_lineage_report.json  sample_mcp_dryrun.json  sample_report.json  sample_report.md  sample_writeback_audit.jsonl  writeback_audit.jsonl
scripts/: check_environment.py  generate_examples.py  seed_demo_lineage.py  validate_artifacts.py  validate_examples.py
tests/: conftest.py  test_cli.py  test_cli_writeback.py  test_datahub_client.py  test_demo_context.py  test_examples.py  test_findings.py  test_report.py  test_smoke.py  test_writeback.py
tests/test_checks/: test_deployment_config_drift.py  (+7 more)
