[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-lineage-guard"
version = "0.1.0"
description = "A DataHub-aware agent that detects ML lineage risks and writes findings back to DataHub."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Model Lineage Guard Contributors" }
]
dependencies = [
  "acryl-datahub>=0.14.0",
  "datahub-agent-context>=0.1.0",
  "jinja2>=3.1.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[project.scripts]
mlguard = "mlguard_entrypoint:app"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools]
py-modules = ["mlguard_entrypoint"]

[tool.setuptools.package-data]
app = ["templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
